WIP: Change to aspire

--- a/Search/Pages/ChatPane.razor
+++ b/Search/Pages/ChatPane.razor
@@ -2,7 +2,7 @@
 @using Search.Constants
 @using VectorSearchAiAssistant.Service.Constants
 @using VectorSearchAiAssistant.Service.Interfaces
-@inject IChatManager chatManager
+@inject ChatManagerClient chatManager
 @inject IJSRuntime JSRuntime
 
 <div class="h-100 mh-100 d-flex flex-column overflow-hidden justify-content-start">
