--- a/Search/Pages/NavMenu.razor
+++ b/Search/Pages/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿@using Search.Constants
 @using VectorSearchAiAssistant.Service.Interfaces
-@inject IChatManager chatManager
+@inject ChatManagerClient chatManager
 
 
 <div class="h-100 d-flex flex-column" style="min-width: 275px;">
